--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ main {
     width: 100%;
     height: calc(100vh - 150px);
     min-height: 25em;
+    flex-direction: column;
 }
 .container {
     margin: auto;
@@ -69,6 +70,12 @@ main {
 }
 .active-red {
     background-color: red;
+}
+main .risultato {
+    display: none;
+}
+.risultato.block {
+    display: block;
 }
 
 /* footer */
